--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,14 +1,12 @@
-me: CI
+name: CI
 
 on:
   push:
     branches: [ "main" ]
 
 jobs:
-
   build-image:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: Log in to GitHub Container Registry
