--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,7 +10,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.API_TOKEN_GITHUB }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build the Docker image
         run: docker build . --tag ghcr.io/${{ github.repository_owner }}/laravel-docker-base-image:latest 
       - name: Push the Docker image
