--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,6 +12,6 @@ jobs:
       - name: Log in to GitHub Container Registry
         run: echo "${{ secrets.API_TOKEN_GITHUB }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
       - name: Build the Docker image
-        run: docker build . --tag ghcr.io/${{ github.repository_owner }}/laravel-docker-base-image:latest 
+        run: docker build . --tag ghcr.io/${{ github.repository_owner }}/laravel-docker-base-image:latest --platform linux/amd64,linux/arm64 
       - name: Push the Docker image
         run: docker push ghcr.io/${{ github.repository_owner }}/laravel-docker-base-image --all-tags
